--- a/css/index.css
+++ b/css/index.css
@@ -3,11 +3,12 @@
     display: flex;
     align-items: center;
     padding: 2%; 
-  
+     
 }
-#menu-navigation{
-    
-    background-color: #5C0F8B;
+#menu-topo, #menu-bottom {
+   
+    padding: 1,5%;
 }
+
 
 
